# DSA_HeroApp

./: .firebaserc  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  Charaktersheet_DSA_mit_Hausregeln Hexe.xlsx  ListeTalente.xlsx  ListeWaffenUndTalente.xlsx  ListeZaubersprueche.xlsx  README.md  codex.json  entities.json  firebase.json  firestore.rules  mempalace.yaml  pubspec.yaml  todo.md  ~$Charaktersheet_DSA_mit_Hausregeln Hexe.xlsx
.claude/: settings.json  settings.local.json
.firebase/: hosting.YnVpbGRcd2Vi.cache
assets/: Gerajin Sirella von Tuzak.dsa-hero.json
docs/: catalog_import_workflow.md  class_diagram.md  gruppen_sharing_offene_schritte.md  ios_xcode_setup.md  mcp_dsa_rules.md  pdf_agent_workflow.md  rule_audit_regelwerk_ueberarbeitung.md  rules_mapping_house_rules_v1.md  spielmodus_konzept.md  technical_overview.md  test_strategy.md  ui_performance_measurements.md  windows_antivirus_audit.md  zauber_kampf_hexen_elfen.md
tool/mcp_dsa_rules/: README.md  pyproject.toml  setup.ps1
tool/mcp_dsa_rules/src/dsa_rules_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
tool/mcp_dsa_rules/src/dsa_rules_mcp/indexer/: __init__.py  chunker.py  embedder.py  pdf_extract.py  pipeline.py
tool/mcp_dsa_rules/src/dsa_rules_mcp/store/: __init__.py  db.py  schema.sql  search.py
tool/mcp_dsa_rules/src/dsa_rules_mcp/tools/: __init__.py  find_topic.py  get_context.py  list_sources.py  refresh_index.py  search_rules.py
tool/mcp_dsa_rules/tests/: test_chunker.py  test_document_extract.py  test_pipeline_incremental.py  test_search_fusion.py
(+713 files in other folders)
