[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-rules-mcp"
version = "0.1.0"
description = "MCP-Server fuer hybride Suche (FTS5 + Vektor) ueber DSA-Regelwerke und Hausregeln."
requires-python = ">=3.10"
authors = [
    { name = "Dennis Adamski" },
]
dependencies = [
    "mcp>=1.0.0",
    "pymupdf>=1.24.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
dsa-rules-mcp = "dsa_rules_mcp.server:main"
dsa-rules-cli = "dsa_rules_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dsa_rules_mcp*"]

[tool.setuptools.package-data]
"dsa_rules_mcp.store" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
